Added navigation buttons to results and movie templates

--- a/views/movie.erb
+++ b/views/movie.erb
@@ -14,3 +14,6 @@
 		<li><strong>Plot:</strong> <%= @movie["Plot"] %></li>
 	</ul>
 </div>
+
+<FORM><INPUT Type="button" VALUE="Back" onClick="history.go(-1);return true;"></FORM>
+<button onclick="window.location='/';">Home</button>
